# SoundCrux_RtAudio

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  build_ninja.bat  build_ninja_debug.bat  build_ninja_release.bat  build_vs_debug.bat  toolchain.cmake  vcpkg.json
cmake/: SoundCruxConfig.cmake.in  SoundCrux_RtAudioConfig.cmake.in
include/: SoundCrux.hpp  SoundCrux_Examples.hpp
include/AudioEngine/: AudioEngine.hpp  AudioGenerator.hpp  StereoSample.hpp
include/AudioEngine/AudioGenerators/: SineGenerator.hpp
include/AudioEngine/Example/: SineGenerator_Example.hpp
include/Examples/: Program_Example.hpp  SineGenerator_Example.hpp
include/Examples/Oscillators/: SawtoothOsc_Example.hpp  SineOsc_Example.hpp
include/Examples/Oscillators/Base/: Oscillator_Example.hpp
src/AudioEngine/: AudioEngine.cpp  AudioGenerator.cpp  StereoSample.cpp
src/AudioEngine/AudioGenerators/: SineGenerator.cpp
src/AudioEngine/AudioGenerators/Base/: AudioGenerator.cpp  StereoSample.cpp
src/AudioEngine/Example/: SineGenerator_Example.cpp
src/Examples/: Program_Example.cpp  SineGenerator_Example.cpp
src/Examples/Oscillators/: SawtoothOsc_Example.cpp  SineOsc_Example.cpp
src/Examples/Oscillators/Base/: Oscillator_Example.cpp
